# Trabalho_ED2_2

./: CMakeLists.txt  main.cpp
Headers/: Answer.h  AvlNode.h  AvlTree.h  BTree.h  BinaryTree.h  CompareCount.h  FileUtils.h  Hash.h  HashSeparated.h  Node.h  NodeAvl.h  NodeB.h  NodeRB.h  Question.h  QuickSort.h  RBTree.h  SplayTree.h  Tag.h  TreapNode.h  TreapTree.h  Vertex.h
Source/: Answer.cpp  AvlNode.cpp  AvlTree.cpp  BTree.cpp  BinaryTree.cpp  CompareCount.cpp  FileUtils.cpp  Hash.cpp  HashSeparated.cpp  Node.cpp  NodeRB.cpp  Question.cpp  QuickSort.cpp  RBTree.cpp  SplayTree.cpp  Tag.cpp  TreapTree.cpp
